--- a/project-02/views/shop/product-list.ejs
+++ b/project-02/views/shop/product-list.ejs
@@ -28,8 +28,9 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/products/<%= product.id %>" class="btn">Detail</a>
-                                    <form action="/add-to-cart" method="POST">
-                                        <button class="btn">Add to Cart</button>
+                                    <form method="POST" action="/cart">
+                                        <button type="submit" class="btn">Add to Cart</button>
+                                        <input type="hidden" name="productId" value="<%= product.id %>">
                                     </form>
                                 </div>
                             </article>
