--- a/project-02/views/shop/cart.ejs
+++ b/project-02/views/shop/cart.ejs
@@ -3,4 +3,24 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (products.length > 0) { %>
+                <ul>
+                    <% products.forEach(cartData =>{ %>
+                        <li>
+                            <p><%= cartData.productData.title %> (<%= cartData.qty %>)</p>
+                            <form action="/cart-delete-item" method="POST">
+                                <input type="hidden" value="<%= cartData.productData.id %>" name="productId">
+                                <button class="btn" type="submit">Delete</button>
+                            </form>
+                        </li>
+                            
+                    <% }) %>
+                </ul>
+
+            <% }else { %>
+                <h1>No Products in Cart!</h1>
+            <% } %>
+             
+        </main>
         <%- include('../includes/end.ejs') %>
