--- a/project-02/views/shop/index.ejs
+++ b/project-02/views/shop/index.ejs
@@ -24,7 +24,7 @@
                         <div class="card__actions">
                             <form method="POST" action="/cart">
                                 <button type="submit" class="btn">Add to Cart</button>
-                                <input type="hidden" name="productId" value="<%= product.id %>">
+                                <input type="hidden" name="productId" value="<%= product._id %>">
                             </form>
                         </div>
                     </article>
