--- a/project-02/views/shop/product-list.ejs
+++ b/project-02/views/shop/product-list.ejs
@@ -27,10 +27,10 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/products/<%= product.id %>" class="btn">Detail</a>
+                                    <a href="/products/<%= product._id %>" class="btn">Detail</a>
                                     <form method="POST" action="/cart">
                                         <button type="submit" class="btn">Add to Cart</button>
-                                        <input type="hidden" name="productId" value="<%= product.id %>">
+                                        <input type="hidden" name="productId" value="<%= product._id %>">
                                     </form>
                                 </div>
                             </article>
