add product to cart but not complete the job

--- a/project-02/views/shop/product-detail.ejs
+++ b/project-02/views/shop/product-detail.ejs
@@ -3,19 +3,14 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-
         <main class="centered">
             <h1><%= product.title %></h1>
             <hr>
-
-             <div>
-                 <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-             </div>
-             <h2>$ <%= product.price %></h2>
-             <p><%= product.description %></p>
-             <form method="POST" action="/cart">
-                <button type="submit" class="btn">Add to Cart</button>
-                <input type="hidden" name="productId" value="<%= product._id %>">
-            </form>
+            <div class="image">
+                <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+            </div>
+            <h2><%= product.price %></h2>
+            <p><%= product.description %></p>
+            <%- include('../includes/add-to-cart.ejs') %>
         </main>
         <%- include('../includes/end.ejs') %>
