--- a/project-02/views/shop/product-list.ejs
+++ b/project-02/views/shop/product-list.ejs
@@ -27,11 +27,8 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/products/<%= product._id %>" class="btn">Detail</a>
-                                    <form method="POST" action="/cart">
-                                        <button type="submit" class="btn">Add to Cart</button>
-                                        <input type="hidden" name="productId" value="<%= product._id %>">
-                                    </form>
+                                    <a href="/products/<%= product._id %>" class="btn">Details</a>
+                                    <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                                 </div>
                             </article>
                             <% } %>
