--- a/project-02/views/shop/orders.ejs
+++ b/project-02/views/shop/orders.ejs
@@ -13,8 +13,8 @@
                         <li class="orders__item">
                             <h1>Order - # <%= order._id %></h1>
                             <ul class="orders__products">
-                                <% order.products.forEach(productData => { %>
-                                    <li class="orders__products-item"><%= productData.product.title %> (<%= productData.quantity %>)</li>
+                                <% order.products.forEach(p => { %>
+                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
                                 <% }); %>
                             </ul>
                         </li>
