--- a/project-02/views/shop/product-detail.ejs
+++ b/project-02/views/shop/product-detail.ejs
@@ -11,6 +11,7 @@
             </div>
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
-            <%- include('../includes/add-to-cart.ejs') %>
-        </main>
+            <% if (isAuthenticated) { %>
+                <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+            <% } %>
         <%- include('../includes/end.ejs') %>
