startup module 15 (Adding Authentication)

--- a/project-02/views/includes/navigation.ejs
+++ b/project-02/views/includes/navigation.ejs
@@ -9,7 +9,7 @@
             <li class="main-header__item">
                 <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
             </li>
-            <% if (isAuthenticated) { %> 
+            <% if (isAuthenticated) { %>
                 <li class="main-header__item">
                     <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
                 </li>
@@ -27,13 +27,16 @@
             <% } %>
         </ul>
         <ul class="main-header__item-list">
-            <% if (!isAuthenticated) { %> 
+            <% if (!isAuthenticated) { %>
                 <li class="main-header__item">
                     <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
                 </li>
+                <li class="main-header__item">
+                    <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+                </li>
             <% } else { %>
                 <li class="main-header__item">
-                    <form action="/logout" method="POST">
+                    <form action="/logout" method="post">
                         <button type="submit">Logout</button>
                     </form>
                 </li>
@@ -50,7 +53,7 @@
         <li class="mobile-nav__item">
             <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
         </li>
-        <% if (isAuthenticated) { %> 
+        <% if (isAuthenticated) { %>
             <li class="mobile-nav__item">
                 <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
             </li>
@@ -66,17 +69,19 @@
                 </a>
             </li>
         <% } %>
-        <% if (!isAuthenticated) { %> 
-            <li class="main-header__item">
+        <% if (!isAuthenticated) { %>
+            <li class="mobile-nav__item">
                 <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
             </li>
+            <li class="mobile-nav__item">
+                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+            </li>
         <% } else { %>
-            <li class="main-header__item">
-                <form action="/logout" method="POST">
+            <li class="mobile-nav__item">
+                <form action="/logout" method="post">
                     <button type="submit">Logout</button>
                 </form>
             </li>
         <% } %>
-        </ul>
     </ul>
 </nav>
