--- a/project-02/views/shop/product-detail.ejs
+++ b/project-02/views/shop/product-detail.ejs
@@ -14,4 +14,5 @@
             <% if (isAuthenticated) { %>
                 <%- include('../includes/add-to-cart.ejs', {product: product}) %>
             <% } %>
+        </main>
         <%- include('../includes/end.ejs') %>
