--- a/project-02/views/auth/reset.ejs
+++ b/project-02/views/auth/reset.ejs
@@ -7,7 +7,7 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if(errorMessage.length > 0) { %>
+        <% if(errorMessage.length > 0) { %> <!--  // if array is not empty -->
             <div class="user-message user-message--error"><%= errorMessage[0] %></div>
         <% } %>
         <form class="login-form" action="/login" method="POST">
@@ -15,15 +15,8 @@
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
             </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Login</button>
+            <button class="btn" type="submit">Reset Password</button>
         </form>
-        <div class="centered"> 
-            <a href="/reset">Reset Password</a>
-        </div>
     </main>
 <%- include('../includes/end.ejs') %>
