now system can send email to reset password

--- a/project-02/views/auth/reset.ejs
+++ b/project-02/views/auth/reset.ejs
@@ -7,10 +7,10 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if(errorMessage.length > 0) { %> <!--  // if array is not empty -->
+        <% if(errorMessage.length > 0) { %> 
             <div class="user-message user-message--error"><%= errorMessage[0] %></div>
         <% } %>
-        <form class="login-form" action="/login" method="POST">
+        <form class="login-form" action="/reset" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
