--- a/project-02/public/css/main.css
+++ b/project-02/public/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 main {
@@ -187,10 +187,13 @@ form {
 
 .card__image {
   width: 100%;
+  height: 18rem;
+  text-align: center;
 }
 
 .card__image img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .card__actions {
@@ -262,8 +265,9 @@ form {
 }
 
 .pagination a:hover,
-.pagination a:active {
-  background-color: #00695c;
+.pagination a:active,
+.pagination a.active {
+  background: #00695c;
   color: white;
 }
 
