understanding async requests and end of module 22

--- a/project-02/views/admin/products.ejs
+++ b/project-02/views/admin/products.ejs
@@ -27,18 +27,23 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="POST">
+                                    <!-- <form action="/admin/delete-product" method="POST">
                                         <input type="hidden" value="<%= product._id %>" name="productId">
                                         <input type="hidden" value="<%= csrfToken %>" name="_csrf">
                                         <button class="btn" type="submit">Delete</button>
-                                    </form>
+                                    </form> -->
+                                    <input type="hidden" value="<%= product._id %>" name="productId">
+                                    <input type="hidden" value="<%= csrfToken %>" name="_csrf">
+                                    <button class="btn" type="button" onclick="deleteProduct(this)">Delete</button>
 
                                 </div>
                             </article>
                             <% } %>
                     </div>
+                    <%- include('../includes/pagination.ejs', {currentPage: currentPage, nextPage: nextPage, previousPage: previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage}) %>
                     <% } else { %>
                         <h1>No Products Found!</h1>
                         <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
+            <script src="/js/admin.js"></script>
